--- a/content/getting-started/index.html
+++ b/content/getting-started/index.html
@@ -4,8 +4,6 @@ title: Getting Started
 permalink: /getting-started/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
+### Linux and Malscan: A Perfect Match
 
-You can find the source code for the Jekyll new theme at: [github.com/jglovier/jekyll-new](https://github.com/jglovier/jekyll-new)
-
-You can find the source code for Jekyll at [github.com/jekyll/jekyll](https://github.com/jekyll/jekyll)
+Malscan can be run on any type of Linux machine; desktops, webservers, database servers, or any infrastructure server can benefit
