--- a/index.html
+++ b/index.html
@@ -3,31 +3,67 @@ layout: page
 ---
 <!DOCTYPE html>
 
+<div>
+
 <h3>Malware Scanning, Simplified</h3>
-  <div class="code-block" style="background-color: #333; color: #f5f5f5; border: 1px #333; border-radius: 5px; font-family: sans-serif; padding: 10px 5px 5px 10px">
+
+  <div class="code-block">
+
     <div style="margin-bottom: 10px">
-      <span class="bash-root-prompt">[<span style="color: #ac2925">root</span>@<span style="color: #70DBDB">example</span>:<span style="color: #ac2925">/usr/local/share/malscan]#</span></span> malscan -mls /web/malscan.org/<br>
-      <span class="bash-blue">Malscan Version: 1.6.0 | Signatures last updated: Thu Jan  7 19:09:04 EST 2016<span><br>
+      <span class="bash-root-prompt">[<span style="color: #ac2925">root</span>@<span style="color: #70DBDB">example</span>:<span style="color: #ac2925">~]#</span></span> malscan -mls /web/malscan.org/<br>
+      <span class="bash-blue">Malscan Version: 1.6.0 | Signatures last updated: Thu Jan  7 19:09:04 EST 2016</span><br>
     </div>
+
     <div style="margin-left: 2%; margin-bottom: 10px">
       <span class="bash-yellow">* MIME Scan: Beginning scan.</span><br>
       - MIME Scan: Compiling a full file list for /web/malscan.org/.<br>
       - MIME Scan: Searching file list for MIME mismatches.<br>
       <span class="bash-green">* MIME Scan: Completed. No suspicious files detected.</span>
     </div>
+
     <div style="margin-left: 2%; margin-bottom: 10px">
-    <span class="bash-yellow">* String Length Scan: Beginning scan.</span><br>
-    - String Length Scan: Searching for strings longer than 15000 characters.<br>
-    <span class="bash-green">* String Length Scan: Completed. No suspicious files detected.</span>
+      <span class="bash-yellow">* String Length Scan: Beginning scan.</span><br>
+      - String Length Scan: Searching for strings longer than 15000 characters.<br>
+      <span class="bash-green">* String Length Scan: Completed. No suspicious files detected.</span>
     </div>
+
     <div style="margin-left: 2%">
       <span class="bash-yellow">* Malware Scan: Beginning scan of /web/malscan.org/...</span><br>
       <span class="bash-green">* Malware Scan: Completed. No malicious files found.</span>
     </div>
+
     <div>
       <span class="bash-root-prompt">
         [<span class="bash-red">root</span>@<span class="bash-blue">example</span>:<span class="bash-red">/usr/local/share/malscan</span>]<span class="bash-red">#</span>
       </span>
     </div>
+
   </div>
 
+  <div>
+    Malscan is an intuitive and easy to use malware scanner for linux, extending ClamAV with additional scanning modes and malware signatures.
+  </div>
+
+</div>
+
+<div style="margin-top: 10px; margin-bottom: 10px">
+
+  <h3>Any Linux, Any Time</h3>
+
+  <div>
+    Malscan is pre-packged for use with Red Hat Enterprise Linux and CentOS operation systems, however it can quickly be installed from source on nearly any Linux operating system that exists.
+
+    We regularly test Malscan on a number of the most widely used operating systems, including Ubuntu, Debian, Arch Linux, Fedora, and OpenSUSE to ensure that whatever your use case you will be protected.
+  </div>
+
+</div>
+
+<div>
+
+  <h3>Open And Free</h3>
+
+  <div>
+    Malscan is free and open source software, released under the MIT License. You can inspect every line of code in the program and make any changes that you'd like, guaranteeing that you'll always be safe and Malscan will always be reliable and transparent.
+  </div>
+
+</div>
