Updated site with new install instructions

--- a/content/contributing/index.html
+++ b/content/contributing/index.html
@@ -95,7 +95,7 @@ permalink: /contribute/
 			</li>
 			<li>You must be referencing a current issue, whether it is a bug report, feature request, or enhancement.</li>
 			<li>You must update the CHANGELOG.md file under the <span class="file-block">### x.x.x-dev</span> section at the top.</li>
-			<li>Your code must have been fully tested on CentOS or RHEL 6 and 7.</li>
+			<li>Your code must have been fully tested on CentOS 6 and 7 or RHEL 6 and 7.</li>
 
 		</ul>
 
