--- a/content/contributing/index.html
+++ b/content/contributing/index.html
@@ -170,6 +170,11 @@ permalink: /contribute/
 
 		<ul>
 			
+			<li>
+				<a href="https://flattr.com/submit/auto?fid=y7wggz&url=https%3A%2F%2Fwww.malscan.org%2Fcontribute%2F" target="_blank">
+					<img src="//button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0">
+				</a>
+			</li>
 			<li>Patreon <span class="file-block blue-block">Coming Soon</span></li>
 			<li>GratiPay <span class="file-block blue-block">Coming Soon</span></li>
 			<li>Bitcoin</li>
