Updated to 1.7.0 display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: page
   <div class="code-block">
 
     <div style="margin-bottom: 10px">
-      <span class="bash-root-prompt">[<span style="color: #ac2925">root</span>@<span style="color: #70DBDB">example</span>:<span style="color: #ac2925">~]#</span></span> malscan -mls ./malscan.org/<br>
+      <span class="bash-root-prompt">[<span style="color: #ac2925">root</span>@<span style="color: #70DBDB">example</span>:<span style="color: #ac2925"> /var/www]#</span></span> malscan -mla ./malscan.org/<br>
       <span class="bash-blue">Malscan Version: {{ site.malscan-version }} | Signatures last updated: {{ "now" | date: "%c"}}</span><br>
     </div>
 
@@ -28,13 +28,13 @@ layout: page
     </div>
 
     <div style="margin-left: 2%">
-      <span class="bash-yellow">* Malware Scan: Beginning scan of /var/www/malscan.org/...</span><br>
+      <span class="bash-yellow">* Malware Scan: Beginning scan of /var/www/malscan.org/</span><br>
       <span class="bash-green">* Malware Scan: Completed. No malicious files found.</span>
     </div>
 
     <div>
       <span class="bash-root-prompt">
-        [<span class="bash-red">root</span>@<span class="bash-blue">example</span>:<span class="bash-red">~</span>]<span class="bash-red">#</span>
+        [<span class="bash-red">root</span>@<span class="bash-blue">example</span>:<span class="bash-red"> /var/www</span>]<span class="bash-red">#</span>
       </span>
     </div>
 
